# js-libp2p-quic

./: .aegir.cjs  .gitignore  .npmignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  package.json  package.tgz  pnpm-lock.yaml  tsconfig.json
.github/workflows/: CI.yml
docs/plans/: 2026-03-02-libp2p-v3-migration-design.md
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
rust/: config.rs  lib.rs  out.rs  socket.rs  stats.rs
scripts/: JS_GEN_PREFIX  postbuild.sh
src/: connection.ts  filter.ts  index.ts  listener.ts  napi.cjs  napi.d.ts  napi.js  stream-muxer.ts  stream.ts  transport.browser.ts  transport.ts  utils.ts
test/: browser.ts  compliance.spec.ts  sanity.spec.ts  transport.spec.ts  util.ts
