[package]
edition = "2021"
name = "chainsafe_libp2p-quic"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
libp2p-identity = { version = "0.2.10", features = ["ed25519", "peerid", "rand", "rsa", "secp256k1", "serde"] }
libp2p-tls = "0.6.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.0.0-alpha.28", default-features = false, features = ["napi9", "async", "tokio_rt"] }
napi-derive = "3.0.0-alpha.26"
oneshot = "0.1.10"
pin-project-lite = "0.2.16"
quinn = "0.11.6"
ring = "0.17.9"
rustls = { version = "0.23.23", features = ["ring"] }
tokio = { version = "1.43.0", features = ["full"] }
# included to satisfy napi dependencies
ctor = "0.3.6"

[build-dependencies]
napi-build = "2.1.4"

[profile.release]
lto = true
strip = "symbols"
