[package]
edition = "2021"
name = "chainsafe_libp2p-quic"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
libp2p-identity = { version = "0.2.12", features = ["ed25519", "peerid", "rand", "rsa", "secp256k1", "serde"] }
libp2p-tls = "0.6.2"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.0.0-beta.12", default-features = false, features = ["napi9", "async", "tokio_rt"] }
napi-derive = "3.0.0-beta.12"
oneshot = "0.1.11"
pin-project-lite = "0.2.16"
quinn = "0.11.8"
ring = "0.17.14"
rustls = { version = "0.23.23", features = ["ring"] }
tokio = { version = "1.46.1", features = ["full"] }
# included to satisfy napi dependencies
ctor = "0.4.2"
socket2 = "0.6.0"

[build-dependencies]
napi-build = "2.2.2"

[profile.release]
lto = true
strip = "symbols"
