[package]
edition = "2021"
name = "chainsafe_libp2p-quic"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
libp2p-identity = { version = "0.2.12", features = ["ed25519", "peerid", "rand", "rsa", "secp256k1", "serde"] }
libp2p-tls = "0.6.2"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.6.1", default-features = false, features = ["napi9", "async", "tokio_rt"] }
napi-derive = "3.4.0"
oneshot = "0.1.11"
pin-project-lite = "0.2.16"
quinn = "0.11.9"
ring = "0.17.14"
rustls = { version = "0.23.35", features = ["ring"] }
tokio = { version = "1.48.0", features = ["full"] }
socket2 = "0.6.1"

[build-dependencies]
napi-build = "2.2.2"

[profile.release]
lto = true
strip = "symbols"
